<resources>
    <string name="app_name">Скажи мусору да!</string>
    <string name="BTN_Kitchen">Кухня</string>
    <string name="BTN_Сabinet">Кабинет</string>
    <string name="BTN_Bathroom">Ванная</string>
    <string name="BTN_Wardrobe">Гардеробная</string>
    <string name="title_activity_main">Скажи мусору да!</string>
    <string name="BTN_Battery">Батарейки</string>
    <string name="BTN_Paper">Бумага</string>
    <string name="BTN_Technic">Техника</string>
    <string name="BTN_Bottles">Бутылки</string>
    <string name="BTN_GoodClothes">Одежда в хорошем состоянии</string>
    <string name="BTN_BadClothes">Одежда в плохом состоянии</string>
    <string name="BTN_Jars">Стеклянные банки</string>
    <string name="BTN_Сontainers">Контейнеры</string>
    <string name="BTN_Box">Коробки</string>
    <string name="title_activity_thing">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="description">Описание</string>
    <string name="Map">Карта</string>
    <string name="whereGarbage">Источник мусора</string>
    <string name="menu_home">Главная</string>
    <string name="menu_account">Личный кабинет</string>
    <string name="menu_addMap">Добавить место сбора мусора</string>
    <string name="email">Введите почту</string>
    <string name="password">Введите пароль</string>
    <string name="logActivity">Войти</string>
    <string name="againPassword">Повторите пароль</string>
    <string name="yourName">Введите Ваше имя</string>
    <string name="SignUpActivity">Зарегистрироваться</string>
    <string name="NoAcc">Еще нет аккаунта? Зарегистрируйтесь!</string>
    <string name="errorEmail">Неправильно введена почта</string>
    <string name="errorPassword">Неправильно введен пароль</string>
    <string name="errorName">Неправильно введено имя</string>
    <string name="successSiqnUp">Вы успешны зарегистрированны</string>
    <string name="successSiqnIn">Вы успешны вошли</string>
    <string name="addGarbage">Что выкинул на этот раз?</string>
    <string name="howManyGarbage">Какое количество?</string>
    <string name="done">Готово!</string>
    <string name="undo">Отмена!</string>
    <string name="refreshInformation">Обновление информации</string>
    <string name="noAccount">Для начала нужно войти в свой аккаунт!</string>
    <string name="addGarageOnHome">Добавить</string>
    <string name="mapHome">Карта всех мусорок</string>
    <string name="statistics">Статистика</string>
    <string name="addSnippet">Добавьте описание</string>
    <string name="adminAccount">Панель администратора</string>
    <string name="aboutApp">О приложении</string>
    <string name="menu_delete">Удалить место сбора</string>
    <string name="copyright">Благодарим движение "Раздельный мусор" за подробный справочник материалов для переработки, который был частично использован нами при работе над приложением. https://rsbor-msk.ru</string>
    <string name="uploadImage">Загрузить фотографию</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="addId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="addIdMamifest">ca-app-pub-3940256099942544~6300978111</string>
   <!--
     <string name="addId">ca-app-pub-6335327761445839/3007702835</string>
    <string name="addIdMamifest">ca-app-pub-6335327761445839~3007702835</string>

         <string name="addId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="addIdMamifest">ca-app-pub-3940256099942544~6300978111</string>-->
</resources>