<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/main"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/nav_addMap"
            android:icon="@drawable/add_map"
            android:title="@string/menu_addMap" />

        <!---->
        <item
            android:id="@+id/nav_delete"
            android:title="Test" />

        <item
            android:id="@+id/nav_aboutApp"
            android:icon="@drawable/information"
            android:title="@string/aboutApp" />

    </group>
</menu>