<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="spiridonov.no_to_garbage.mainMenu.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_account"
        android:name="spiridonov.no_to_garbage.mainMenu.AccountActivity"
        android:label="@string/menu_account"
        tools:layout="@layout/activity_account" />
    <fragment
        android:id="@+id/nav_addMap"
        android:name="spiridonov.no_to_garbage.mainMenu.AddMapActivity"
        android:label="@string/menu_addMap"
        tools:layout="@layout/activity_maps" />
    <fragment
        android:id="@+id/nav_aboutApp"
        android:name="spiridonov.no_to_garbage.mainMenu.AboutAppActivity"
        android:label="@string/aboutApp"
        tools:layout="@layout/fragment_mapview" />
    <fragment
        android:id="@+id/nav_addImage"
        android:name="spiridonov.no_to_garbage.mainMenu.AddImageActivity"
        android:label="@string/uploadImage"
        tools:layout="@layout/activity_add_image" />
    <fragment
        android:id="@+id/nav_database"
        android:name="spiridonov.no_to_garbage.DatabaseFragment"
        android:label="fragment_database"
        tools:layout="@layout/fragment_database" />

</navigation>