<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGarbageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/addGarbage"
            android:textAlignment="center"
            android:textColor="@color/colorMain"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerGarbage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/howManyGarbage"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAddGarbage"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/done"
            android:textSize="30dp"
            app:icon="@drawable/ic_baseline_done_all_24" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="19" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>